fix(chat): add `overflow: scroll;` to enable scrolling for sidebar

--- a/mysite/chat/static/css/app.css
+++ b/mysite/chat/static/css/app.css
@@ -820,6 +820,7 @@ p + p {
     padding-top: 18px; }
 
 .chat-sidebar {
+  overflow: scroll;
   position: fixed;
   display: none;
   top: 0;
